# legible

./: .env.example  LICENSE  README.md  pyproject.toml
batch_results/: analysis_20260227.json  analysis_20260228.json  cerebras_analysis_20260301.json  cerebras_sessions_20260301.jsonl  csi_report.json  gemini_analysis_20260228.json  gemini_sessions_20260228.jsonl  groq_analysis_20260228.json  groq_sessions_20260228.jsonl  outreach_data.json  sessions_20260227.jsonl
docs/: RFC-0002-sla-evaluation-spec.md
examples/: adaptive_simulator.py  batch_runner.py  csi_analyzer.py  csi_dashboard.py  gateway_replay.py  multi_runner.py  proving_ground.py  research_agent.py  tri_router_simulator.py
legible/: __init__.py  attestation.py  evaluator.py  evidence.py  intent.py  providers.py  session.py
legible/client/: __init__.py  kernel.py
legible/firewall/: __init__.py  entropy.py  models.py  rolling_csi.py  state_machine.py
legible/gateway/: __init__.py  __main__.py  app.py  engine.py  models.py
legible/integrations/: __init__.py  langchain.py  openai.py  requests.py
logs/: shadow_decisions.jsonl
reports/: csi_dashboard.html  simulation.html  tri_router.html
tests/: test_evaluator.py
