[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "legible"
version = "0.1.0"
description = "Autonomous coordination, readable, verifiable, enforceable."
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
keywords = ["ai", "agents", "sla", "accountability", "coordination", "legible"]

dependencies = [
    "httpx>=0.27",
    "pydantic>=2.0",
    "cryptography>=42",
]

[project.optional-dependencies]
langchain = ["langchain-core>=0.2"]
openai    = ["openai>=1.0"]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["legible*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py310"
